syntax = "proto2";
package PTP.User;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message GenUserIdReq{}

message GenUserIdRes{
  required uint32 userId = 1;
  required Common.ERR err = 100;
}

message UploadUserReq{
  repeated Common.UserStoreRow users = 1;
  required uint32 time = 3;
}

message UploadUserRes{
  optional Common.ERR err = 100;
}

message DownloadUserReq{
  repeated string userIds = 1;
}

message DownloadUserRes{
  repeated Common.UserStoreRow users = 1;
  optional Common.ERR err = 100;
}

message ShareBotReq{
  required string userId = 1;
  required string firstName = 2;
  optional string avatarHash = 3;
  required string bio = 4;
  optional string init_system_content = 5;
  optional string welcome = 6;
  optional string template = 7;
}

message ShareBotRes{
  optional Common.ERR err = 100;
}


message ShareBotStopReq{
  required string userId = 1;
}

message ShareBotStopRes{
  optional Common.ERR err = 100;
}

